# Corvus_Macro_Automator

./: .gitignore  CorvusMacroAutomator.spec  README.md  build.ps1  macro_engin.py  macros.json  main.py  pyproject.toml
pages/: edit_page.py  main_page.py
