[project]
name = "corvus-macro-automator"
version = "0.1.0"
description = "PyQt6 按鍵精靈：錄製與播放鍵盤滑鼠巨集"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7.0",
  "PyAutoGUI>=0.9.54",
  "pynput>=1.7.7",
]

[project.scripts]
corvus-macro = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.uv]
package = true
